--- a/css/index.css
+++ b/css/index.css
@@ -137,3 +137,19 @@ button[disabled=disabled], button:disabled {
 #mensagens-erro{
 	color: red;
 }
+
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
+
+#filtrar-tabela{
+	width: 200px;
+	height:35px;
+	margin-bottom: 10px;
+	
+}
+
+.invisivel{
+	display: none;
+}
